Maxing out image sizes in entry. Melissa was starting to shoot images above her blog resolution, and WP wanted to overflow them. Lamo. Now all entry images are maxed to entry width, whatever that may be. I also attempted to specify heights to as to avoid squishing.

--- a/styles/less/style.less
+++ b/styles/less/style.less
@@ -335,6 +335,11 @@ a, a:visited {
     color: @pantoneGreenHEX;
     text-decoration: underline;
   }
+  img {
+    max-width: 100%;
+    height: 100%;
+  }
+
 }
 
 #page-wrap {
