--- a/styles/mobile/less/mobile-style.less
+++ b/styles/mobile/less/mobile-style.less
@@ -354,6 +354,10 @@ a, a:visited {
     color: @pantoneGreenHEX;
     text-decoration: underline;
   }
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 #page-wrap {
